--- a/style.css
+++ b/style.css
@@ -1,37 +1,120 @@
+/* use vw for font size to make it auto sizable with page */
+
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  line-height: 1.3;
 }
 
-body {
-    /*
-    background-image: url(hero.jpg);
+html{
+
+}
+
+body{
+  /*
+  background-image: url(hero.jpg);
 background-repeat: no-repeat;
 background-size: cover;
- */
+*/
 font-family: 'Roboto', sans-serif;
-background-color: #00000c;
+ background-color: #00000c; 
+}
+
+/* Nav bar */
+
+nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 10vh;
+  background-color: black;
+  position: fixed;
+  width: 100%;
+  opacity: 95%;
+  z-index: 3;
+}
+
+.nav-links{
+  display: flex;
+  list-style: none;
+  margin-right: 30px;
+}
+
+.nav-links li {
+  padding-left: 10rem;
+  font-size: 1.2rem;
+  color: white;
+  filter: blur(.4px);
+  text-shadow: 0 0 10px #6faee2,0 0 20px #6faee2,0 0 40px #6faee2,0 0 80px #6faee2,0 0 160px #6faee2;
+  letter-spacing: 5px;
+}
+
+nav a {
+  text-decoration: none;
+  font-size: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  color: white;
+  filter: blur(.4px);
+  font-weight: 100px;
+  font-family: 'Roboto', sans-serif;
+  text-shadow: 0 0 10px #2196f3,0 0 20px #2196f3,0 0 40px #2196f3,0 0 80px #2196f3,0 0 160px #2196f3;
+}
+
+nav h1 a {
+  color: white;
+  font-size: 1.8rem;
+  margin-left: 50px;
+}
+
+.login {
+  border: 2px solid white;
+  text-align: center;
+  padding: 6px 1px 6px 10px;
+  width:fit-content;
+  /* box-shadow: 0 0 10px #2196f3,  0 0 10px #2196f3,  0 0 10px #2196f3,  0 0 10px #2196f3,  0 0 10px #2196f3;  */
+}
+
+.login a:hover{
+  text-shadow: 0 0 10px #6eb9f7,  0 0 10px #6eb9f7,  0 0 10px #6eb9f7,  0 0 10px #6eb9f7,  0 0 10px #6eb9f7; 
 
 }
 
+.login a {
+  padding: 6px 18px;
+}
+
+#login{
+border-right: 2px solid white;
+}
+/* --------------------------- */
+
+/*IDs */
+
+
+/* Classes */
+
 .wrapper{
-    max-width: 450px;
-    width: 100%;
-    margin: 7em auto;
-    padding: 20px;
-    box-shadow: 0 0 10px #2196f3,  0 0 10px #2196f3,  0 0 10px #2196f3,  0 0 10px #2196f3,  0 0 10px #2196f3; 
-    border: solid 2px rgba(68, 68, 68, 0.445);
-    border-radius: 10px;
-    background-clip: padding-box;
-    backdrop-filter: blur(10px);
-    text-align: center;
+  max-width: 450px;
+  width: 100%;
+  margin: 7em auto;
+  padding: 20px;
+  box-shadow: 0 0 10px #2196f3,  0 0 10px #2196f3,  0 0 10px #2196f3,  0 0 10px #2196f3,  0 0 10px #2196f3; 
+  border: solid 2px rgba(68, 68, 68, 0.445);
+  border-radius: 10px;
+  background-clip: padding-box;
+  backdrop-filter: blur(10px);
+  text-align: center;
 
 }
 
 .form-glass{
 width: 100%;
 }
+
+
+
 
 .wrapper:hover{
 
@@ -265,4 +348,288 @@ height: 60px;
     text-shadow: 0 0 10px #2196f3,0 0 20px #2196f3,0 0 40px #2196f3,0 0 80px #2196f3,0 0 160px #2196f3;
     justify-content: space-around;
     margin-bottom: 1em;
+}
+
+
+/* Landing Page Specifics */
+
+.landing{
+  text-align: center;
+  height: 100vh;
+  min-height: 740px;
+  background-image: url(landing_hero2.jpg);
+  background-repeat: no-repeat;
+  width: 100%;
+  animation: breathe 60s linear infinite;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  /* If you want padding for some reason later on 
+  padding: 0rem 5rem; */
+}
+
+
+@keyframes breathe {
+  0%   { background-size: 100% auto; }
+  50% { background-size: 110% auto; }
+  100% { background-size: 100% auto;}
+}
+
+.landing-main-area{
+min-width: 90%;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+}
+
+.big-text{
+  font-family: 'Roboto', sans-serif;
+  font-size: 5vw;
+  color: white;
+  filter: blur(.4px);
+  text-shadow: 0 0 10px #2196f3,0 0 20px #2196f3,0 0 40px #2196f3,0 0 80px #2196f3,0 0 160px #2196f3;
+}
+
+.subtitle{
+  font-family: 'Roboto', sans-serif;
+  font-size: 2vw;
+  color: white;
+  font-weight: 100;
+  font-style: italic;
+  margin-top: 20px;
+  filter: blur(.4px);
+  text-shadow: 0 0 10px #2196f3,0 0 20px #2196f3,0 0 40px #2196f3,0 0 80px #2196f3,0 0 160px #2196f3;
+}
+
+.landing-section-button{
+text-transform: uppercase;
+letter-spacing: 4px;
+filter: blur(.4px);
+text-shadow: 0 0 10px #2196f3,0 0 20px #2196f3,0 0 40px #2196f3,0 0 80px #2196f3,0 0 160px #2196f3;
+text-decoration: none;
+font-size: 15px;
+border: none;
+transition: 0.6s;
+color: white;
+padding: 1em 1em;
+border-radius: 10px;
+border: 0.5px solid white;
+min-width: 20%;
+height: 60px;
+background-color: transparent;
+margin-top: 5vh;
+backdrop-filter: blur(2px);
+}
+
+.landing-section-button:hover{
+  box-shadow: 0 0 10px #2196f3,0 0 20px #2196f3,0 0 40px #2196f3;
+  cursor: pointer;
+}
+
+.landing-section-button:focus{
+  outline: none;
+  
+}
+
+.arrow {
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 10px;
+  position: absolute;
+  top: 90%;
+}
+
+.arrow:hover{
+  opacity: 50%;
+  cursor: pointer;
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+.intro{
+  background-color: black;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+}
+
+.slider{
+  background-color: black;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 3;
+}
+
+.intro-text{
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  font-size: 3rem;
+  filter: blur(.4px);
+  font-weight: 100px;
+  text-shadow: 0 0 10px #2196f3,0 0 20px #2196f3,0 0 40px #2196f3, 0 0 60px #2196f3;
+  text-transform: uppercase;
+}
+
+.hide{
+  background: black;
+  overflow:hidden;
+  padding: 10px;
+  padding-left: 25px;
+
+}
+
+.hide span {
+  transform: translateY(100%);
+  /* spans are block elements so we have to inline them to be able to use transform property on them */
+  display: inline-block;
+
+}
+
+.slider-text{
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  font-size: 5rem;
+  filter: blur(.4px);
+  font-weight: 100px;
+  text-shadow: 0 0 10px #2196f3,0 0 20px #2196f3,0 0 40px #2196f3, 0 0 60px #2196f3;
+  text-transform: uppercase;
+}
+
+/* Scroll bar */
+
+::-webkit-scrollbar{
+width: 0;
+}
+
+#scrollPath{
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 10px;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.05);
+}
+
+#progress_bar{
+position: fixed;
+top: 0;
+right: 0;
+width: 10px;
+background: linear-gradient(to top, #008aff,white);
+}
+
+#progress_bar::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, #008aff,white);
+  filter: blur(10px);
+}
+
+#progress_bar::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, #008aff,white);
+  filter: blur(30px);
+
+}
+
+/*------------------------------------------------------------------*/
+
+/* Relive Section */
+
+.relive{
+background-color: white;
+width: 100%;
+height: 600px;
+}
+
+.left{
+  float: left;
+  text-align: center;
+  padding: 111.5px 83.6px;
+  width: 50%;
+  max-width: 700px;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.left-contents{
+  margin-top: 20%;
+}
+
+.left h1{
+  font-size: 2vw;
+  font-weight: 700;
+  margin-bottom: 2%;
+}
+
+.left p {
+  font-style: italic;
+  font-size: 1.5vw;
+}
+
+.relive-button{
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  filter: blur(.4px);
+  text-shadow: 0 0 10px #2196f3,0 0 20px #2196f3,0 0 40px #2196f3,0 0 80px #2196f3,0 0 160px #2196f3;
+  text-decoration: none;
+  font-size: 15px;
+  border: none;
+  transition: 0.6s;
+  color: black;
+  padding: 1em 1em;
+  border-radius: 10px;
+  border: 0.5px solid white;
+  min-width: 100px;
+  height: 60px;
+  background-color: transparent;
+  margin-top: 20px;
+  backdrop-filter: blur(2px);
+  }
+  
+  .relive-button:hover{
+    box-shadow: 0 0 10px #2196f3,0 0 20px #2196f3,0 0 40px #2196f3;
+    cursor: pointer;
+  }
+  
+  .relive-button:focus{
+    outline: none;
+  }
+
+.right{
+  float: right;
+  position: relative;
+  width: 50%;
+  padding: 111.5px 83.6px;
+  box-sizing: border-box;
+  overflow: hidden;
+  text-align: center;
 }
